--- a/pcClient/src/main/resources/css/style.css
+++ b/pcClient/src/main/resources/css/style.css
@@ -12,6 +12,10 @@
     -fx-background-position: center;
 }
 
+#setting {
+    -fx-background-image: url("../img/set.png");
+}
+
 
 #winClose {
     -fx-cursor: hand;
