--- a/roomManager/src/main/resources/css/signUp.css
+++ b/roomManager/src/main/resources/css/signUp.css
@@ -6,6 +6,9 @@
     box-shadow: 2px 2px 5px #aaa;
     border-radius: 5px;
 }
+.sign-header{
+    display: flex;
+}
 .signUp-page>.sign-up-top{
     text-align: center;
     padding: 0 0 10px 0;
