--- a/roomManager/src/main/resources/css/personal.css
+++ b/roomManager/src/main/resources/css/personal.css
@@ -21,7 +21,7 @@
 /*----------*/
 .personal-page{
     margin: auto;
-    max-width: 960px;
+    max-width: 1020px;
 }
 /*----------*/
 .personal-info{
@@ -29,7 +29,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: start;
-    margin: 100px 0 0 0;
+    margin: 125px 0 0 0;
     height: 100px;
     border-radius: 8px;
     box-shadow: 0 0 3px #ccc;
@@ -55,7 +55,7 @@
 }
 .info-left .head-img{
     position: relative;
-    top: -80px;
+    top: -95px;
     margin: 0 20px 0 0;
     width: 156px;
     height: 156px;
@@ -110,19 +110,6 @@
 .message .msg-content{
     min-height: 300px;
 }
-.friends{
-    margin: 0 0 0 10px;
-    width: 28%;
-}
-.fri-header{
-    height: 50px;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    border-bottom: 1px solid #dfdfdf;
-    background-color: #fff;
-    box-shadow: 0 0 3px #ccc;
-}
 /*----------*/
 .video-list{
     display: flex;
@@ -153,4 +140,44 @@
     border-radius: 10px;
     border: 1px solid #0084ff;
     cursor: pointer;
+}
+/*----------*/
+.friends{
+    margin: 0 0 0 10px;
+    width: 28%;
+}
+.fri-header{
+    height: 50px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    padding: 0 10px;
+    border-bottom: 1px solid #dfdfdf;
+    background-color: #fff;
+    box-shadow: 0 0 3px #ccc;
+    font-size: 18px;
+}
+.fri-content{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: stretch;
+    padding: 5px 3px;
+}
+.fri-li{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5px 0;
+    padding: 10px 5px;
+    border-bottom: 1px solid #ccc;
+    color: #888;
+    font-weight: bold;
+}
+.fri-li .fri-head{
+    width: 48px;
+    height: 48px;
+}
+.fri-li .fri-email{
+
 }
