--- a/roomManager/src/main/resources/css/personal.css
+++ b/roomManager/src/main/resources/css/personal.css
@@ -4,7 +4,7 @@
     height: 50px;
     box-shadow: 0px 0px 5px #aaa;
     align-items: center;
-    padding-left: 80px;
+    padding-left: 50px;
     background-color: #fff;
 }
 .header-top-container .header-left{
@@ -20,8 +20,15 @@
 }
 /*----------*/
 .personal-page{
+    position: relative;
     margin: auto;
     max-width: 1020px;
+}
+.personal-color{
+    margin-top: 20px;
+    height: 120px;
+    width: 100%;
+    background-color: #bdbdbd;
 }
 /*----------*/
 .personal-info{
@@ -29,8 +36,8 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: start;
-    margin: 125px 0 0 0;
-    height: 100px;
+    padding: 20px 25px;
+    height: 110px;
     border-radius: 8px;
     box-shadow: 0 0 3px #ccc;
     background-color: #fff;
@@ -38,7 +45,7 @@
 .personal-info .info-right{
     display: flex;
     flex-flow: column-reverse nowrap;
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
 }
 .info-right .detail{
     padding: 5px 10px;
@@ -47,25 +54,36 @@
     border: 1px solid #0396ff;
 }
 .personal-info .info-left{
+    position: relative;
     display: flex;
     flex-flow: row nowrap;
     flex-grow: 1;
-    margin: 0 0 0 30px;
-    padding: 20px 0;
+    /* margin: 0 0 0 30px; */
+    /* padding: 15px 0; */
 }
 .info-left .head-img{
     position: relative;
-    top: -95px;
+    bottom: 60px;
     margin: 0 20px 0 0;
-    width: 156px;
-    height: 156px;
+    width: 168px;
+    height: 168px;
     border-radius: 12px;
     background-color: #fff;
     border: 2px solid #fff;
 }
 .info-left .name{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+}
+.name .name-nick{
     font-size: 26px;
     font-weight: bold;
+}
+.name .name-email{
+    font-size: 21px;
+    font-weight: bold;
+    color: #686868;
 }
 /*----------*/
 .personal-other{
@@ -119,21 +137,25 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
+    padding: 10px 20px;
     border-bottom: 1px solid #f0f0f0;
 }
 .video-img{
-    width: 160px;
-    height: 120px;
+    width: 90px;
+    height: 70px;
 }
 .video-info{
     display: flex;
     flex-flow: column nowrap;
     flex-grow: 1;
+    align-self: center;
+    margin: 0 30px;
     color: #888;
+    font-size: 13px;
 }
 .video-btn{
     align-self: flex-end;
-    margin: 0 20px 30px 0;
+    margin: 0 10px 10px 0;
     padding: 3px 15px;
     color: #0084ff;
     background-color: #e5f2ff;
